IEEE-188: Fixed CSS bugs, and added scroll bards to overflowing cards

--- a/hackathon_site/dashboard/frontend/src/pages/AdminDashboard/AdminDashboard.module.scss
+++ b/hackathon_site/dashboard/frontend/src/pages/AdminDashboard/AdminDashboard.module.scss
@@ -2,11 +2,11 @@
 @import "./../../assets/abstracts/variables";
 
 .overviewCard {
-    height: 100%;
-    min-height: 52px;
-    width: 100%;
-    text-align: center;
+    width: 254px;
+    text-align: left;
+    height: 52px;
     justify-content: center;
+    border-radius: 0px;
     @include flexPosition($dir: column);
 }
 
